2000-05-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: defined __STRING if not yet defined (e.g. in mingw32)
	* configure.in: added flic library to windows section
	
2000-05-16  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Load correct palettes for intro. Implement palette fade 
	out/in

2000-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: F4 toggles fullscreen (Windows & Linux)

2000-05-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Midi.cc: fix to windows playing MIDI only once
	* fnames.h: included MIDITMPFILE

2000-05-11  Tristan Tarrant  <tarrant_tristan@emc.com>

	* utils.cc: Implemented Switch_slash which takes care of using
	backslashes instead of slashes in Windows filenames...
	* fnames.h: Removed the duplication of filenames with backslashes

2000-05-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc: dirty fix to visual artifacting (see mailing list)
	* objs.cc: reverted anim. code to earlier state
	* imagewin.cc, exult.cc: pressing Enter will toggle fullscreen
	I don't get why SDL won't detect ALT though...

2000-05-08  Tristan Tarrant  <tarrant_tristan@emc.com>

	* flic/*: Implement flic-playing library
	* gamewin.cc: stuff for flics.

2000-05-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: avoided Internal Compiler Error for gcc 2.95.2
	* README.win32: minor change for release 0.26

2000-05-08  Jeff Freedman  <jeff@patches.simutech.com>

	* Pathfinding added to run_usecode().  Can be tested by
	double-clicking on a bucket.  Works, but needs refinement.

2000-05-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs.cc: attempt at synching animations 

2000-05-03  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Show game title in splash screen

	* exult.cc: you can now press 'i' to show the npc's inventories just
	like the real U7. Needs improvement.
	New shape browser: PgUp/PgDn selects file, sS selects shape, fF 