@@ -402,7 +402,12 @@ public:
 	void view_down();		// Move view down.
 	void view_up();			// Move view up.
 					// Start moving actor.
-	void start_actor(int winx, int winy);
+	void start_actor(int winx, int winy, int speedup)
+		{
+					// 1/8 sec/frame.
+		main_actor->walk_to_point(chunkx*chunksize + winx, 
+				chunky*chunksize + winy, 125>>speedup);
+		}
 	void stop_actor();		// Stop main actor.
 					// Find gump (x, y) is in.
 	Gump_object *find_gump(int x, int y);
